Don't throw an exception if no taxa loaded yet